# akasha-public

./: 404.html  CHANGELOG.md  INTEGRATIONS.md  LICENSE  README.md  THIRD_PARTY_LICENSES  USER_GUIDE.md  VISION.md  VISION_ES.md  agent-patterns.md  api-reference.md  authentication.md  cluster-operations.md  configuration.md  dashboard.md  get-akasha.sh  index.html  installation.md  license-management.md  mkdocs.yml  sdk-nodejs.md  sdk-python.md  sitemap.xml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
concepts/architecture/: index.html
concepts/cas/: index.html
concepts/memory-layers/: index.html
concepts/pheromones/: index.html
deploy/: akasha-install.sh
deployment/clustering/: index.html
deployment/docker/: index.html
deployment/monitoring/: index.html
docs/: BUSINESS_CASE.md  BUSINESS_CASE_EN.md  COST_PROJECTION.md  INTEGRATION_GUIDE.md  generate_cost_charts.py  index.html  index.md  openapi.yaml  vision.md
docs/api/: index.html  openapi.yaml
docs/concepts/: architecture.md  cas.md  memory-layers.md  pheromones.md
docs/deployment/: clustering.md  docker.md  monitoring.md
docs/examples/: langgraph.md  playground.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/sdks/: nodejs.md  python.md  rest-api.md
examples/langgraph/: index.html
examples/langgraph-memory/: README.md  langgraph_agents.py  requirements.txt
examples/multi-agent-pipeline/: README.md  akasha_client.py  requirements.txt  run_demo.py
examples/playground/: index.html
examples/simulation/: README.md  agent_analyst.py  agent_coordinator.py  agent_scout.py  akasha_client.py  run_simulation.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mcp-server/: README.md  pyproject.toml  server.py
sdks/node/: README.md  package.json  tsconfig.json
sdks/node/src/: client.ts  http-client.ts  index.ts  models.ts
sdks/nodejs/: index.html
sdks/python/: README.md  index.html  pyproject.toml
sdks/python/src/akasha/: __init__.py  async_client.py  client.py  http_client.py  models.py
sdks/python/src/akasha/proto/: __init__.py  akasha_pb2.py  akasha_pb2.pyi  akasha_pb2_grpc.py
sdks/rest-api/: index.html
search/: search_index.json
skills/akasha-agent-onboarding/: SKILL.md
skills/akasha-cluster/: SKILL.md
skills/akasha-memory/: SKILL.md
skills/akasha-memory/references/: python-sdk.md
skills/akasha-nidra/: SKILL.md
skills/akasha-stigmergy/: SKILL.md
vision/: index.html
